# calvin_navigation

./: .gitignore  README.md  stack.xml
calvin_2dnav/: mainpage.dox  manifest.xml
calvin_2dnav/launch/: calvin_2dnav.launch  calvin_2dnav_339.launch  calvin_2dnav_avz3rd.launch  calvin_2dnav_sim.launch  map_server.launch  test_2dnav_calvin.launch  test_2dnav_calvin_gazebo.launch
calvin_2dnav/maps/: avz3floor_339.yaml  avz3floor_complete.pgm  avz3floor_complete.yaml  avz3floor_complete_no_retouch.yaml  avz3floor_pg2elevator.pgm  avz3floor_pg2elevator.yaml  avz3floor_pg2elevator_v2.pgm  avz3floor_pg2elevator_v2.yaml  avz3floor_pg2elevator_v3.pgm  avz5floor_open_elevatoredit.yaml  avz_3+5_1.yaml  avz_3+5_v1.pgm  avz_3+5_v1.yaml  avz_eg.pgm  avz_eg.yaml  new_map_avz_3rd_v4.pgm  new_map_avz_3rd_v4.yaml  pgraum.yaml
calvin_2dnav/test/: testsetpose.py
calvin_2dnav_slam/: mainpage.dox  manifest.xml
calvin_2dnav_slam/launch/: calvin_2dnav.launch  frontier_exploration_with_global_map.launch
calvin_map_server/: CMakeLists.txt  manifest.xml  package.xml
calvin_map_server/launch/: calvin_map_server.launch  calvin_map_server_avz3rd.launch
calvin_map_server/src/: image_loader.cpp  main.cpp
calvin_map_server/srv/: LoadMap.srv
calvin_map_server/test/: loadmaptest.py  utest.cpp
calvin_navigation/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
calvin_navigation/config/: base_local_planner_params.yaml  common_costmap_params.yaml  dwa_local_planner_params.yaml  exploration_costmap_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  recovery_behaviors.yaml
calvin_navigation/launch/: dual_map_navigation.launch  single_map_navigation.launch  slam.launch
calvin_navigation/launch/components/: amcl.launch  frontier_exploration.launch  gmapping.launch  move_base.launch
calvin_navigation/rviz/: navigation.rviz
calvin_navigation_config/: mainpage.dox  manifest.xml
calvin_navigation_config/move_base/: base_local_planner_params.yaml  costmap_common_params.yaml  recovery_behaviors.yaml
calvin_navigation_experiments/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
calvin_navigation_experiments/launch/: dual_map_navigation_339.launch  dual_map_navigation_dfki.launch  gazebo_avz5th_floor_slam.launch  single_map_navigation_339.launch  single_map_navigation_dfki.launch
calvin_navigation_experiments/maps/: avz3floor_loc_339.pgm  avz3floor_nav_339.pgm
calvin_navigation_global/: amcl_node.xml  mainpage.dox  manifest.xml  move_base.xml  slam_gmapping.xml
calvin_navigation_slam/: manifest.xml  move_base.xml  slam_gmapping.xml
calvin_navigation_slam/config/: global_costmap_params.yaml
calvin_navigation_slam/launch/: slam.launch
doc/: posen.txt
