<package>
  <name>calvin_map_server</name>
  <version>0.0.1</version>
  <description>This package contains an adaption of the 'map_server' by Brian Gerkey, Tony Pratkanis that allows to switch maps, e.g. to change maps during navigation across different floor levels.</description>
  <author>Michael Stypa</author>
  <maintainer email="mstypa@uni-osnabrueck.de">Michael Stypa</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/calvin_map_server</url>

  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sdl-image</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>calvin_navigation</build_depend>
  <build_depend>calvin_navigation_experiments</build_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>sdl-image</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>calvin_navigation</run_depend>
  <run_depend>calvin_navigation_experiments</run_depend>

  <test_depend>rospy</test_depend>



  <buildtool_depend>catkin</buildtool_depend>
</package>

