<package>
  <name>calvin_navigation</name>
  <version>0.0.1</version>
  <description> 
    Configs and launch file to make various navigation components usable for Calvin.
  </description>

  <author>Jochen Sprickerhof, Andre Potenza, Michael Stypa, Michael Görner, Henning Deeken</author>
  <maintainer email="jochen@sprickerhof.de">Jochen Sprickerhof</maintainer>
  <maintainer email="hdeeken@uni-osnabrueck.de">Henning Deeken</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/calvin_navigation</url>

  <build_depend>move_base</build_depend>
  <build_depend>amcl</build_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>frontier_exploration</build_depend>

  <run_depend>move_base</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>frontier_exploration</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
