<package>
  <name>calvin_navigation_experiments</name>
  <version>0.0.1</version>
  <description>Launch files to call Calvin's navigation behaviors in different environments.</description>

  <author>Andre Potenza, Michael Stypa, Michael Görner, Henning Deeken</author>
  <maintainer email="mgoerner@uni-osnabrueck.de"> Michael Görner</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/calvin_navigation_experiments</url>

  <build_depend>calvin_navigation</build_depend>

  <run_depend>calvin_navigation</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
